address issue with not wrapping horizontal checkboxes and radio buttons, closes https://github.com/MartijnR/enketo-grid-theme/issues/98

--- a/src/sass/core/_main.scss
+++ b/src/sass/core/_main.scss
@@ -238,10 +238,12 @@ legend {
         @include display-flex;
         @include flex-wrap(wrap);
         @include flex-direction(row);
+        // safari needs this to be inline or inline-block
+        display: inline-block;
     }
     label, .filler {
         overflow: hidden;
-        flex: 1;
+        @include flex(1);
         min-width: 30%;
         padding-right: 10px;
         float: left;
